Added scripts for generating out-of-source builds: native and for cross-compiling to ARM and Windows x86 32bit

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,10 +6,9 @@ set(hlapi_sources
 )
 
 set(CAPNPC_OUTPUT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
-#   include_directories(${CAPNPC_OUTPUT_DIR})
 capnp_generate_cpp(CAPNP_SRCS CAPNP_HDRS schema.capnp)
 add_library(hlapi SHARED ${hlapi_sources} ${CAPNP_SRCS})
 add_library(hlapi_static ${hlapi_sources} ${CAPNP_SRCS})
-target_link_libraries(hlapi ${CAPNP_LIBRARIES})
-target_link_libraries(hlapi_static ${CAPNP_LIBRARIES})
+target_link_libraries(hlapi ${CAPNP_LIBRARIES_LITE})
+target_link_libraries(hlapi_static ${CAPNP_LIBRARIES_LITE})
 
