--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -1,2 +1,2 @@
 add_executable(viz visualization_server.cpp ${CAPNP_SRCS})
-target_link_libraries (viz ${EXTRA_LIBS} ${CAPNP_LIBRARIES_LITE} ${Boost_LIBRARIES} hlapi_static seidel cl_interpreter) 
+target_link_libraries (viz ${EXTRA_LIBS} ${Boost_LIBRARIES} ${CAPNP_LIBRARIES} cl_interpreter hlapi_static seidel  ) 
