Fixed two bugs in asio-kj-interop and serialization that could affect writing messages

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ elseif(CMAKE_SYSTEM_NAME STREQUAL Linux)
 endif()
 
 if(MACOSX)
-  set(CMAKE_CXX_FLAGS "-std=c++11 -stdlib=libc++")
+  set(CMAKE_CXX_FLAGS "-std=c++11 -stdlib=libc++ -Wall")
   # on macosx we link to libc++
 
   set(CMAKE_MACOSX_RPATH 1)
