Added variable exports for capnp in cmake file

--- a/commelec-api/CMakeLists.txt
+++ b/commelec-api/CMakeLists.txt
@@ -19,3 +19,9 @@ target_link_libraries(hlapi_static ${CAPNP_LIBRARIES_LITE} ${EXTRA_LIBS} ${Boost
 
 add_executable(commelecd daemon.cpp json.cpp)
 target_link_libraries(commelecd ${EXTRA_LIBS} ${CAPNP_LIBRARIES_LITE} ${Boost_LIBRARIES} hlapi_static)
+
+set(CAPNP_SRCS "${CAPNP_SRCS}" PARENT_SCOPE)
+set(CAPNP_HDRS "${CAPNP_HDRS}" PARENT_SCOPE)
+set(CAPNP_LIBRARIES "${CAPNP_LIBRARIES}" PARENT_SCOPE)
+set(CAPNP_LIBRARIES_LITE "${CAPNP_LIBRARIES_LITE}" PARENT_SCOPE)
+# Export CAPNP_ defs to parent scope 
