Fixed capnp generation issue

--- a/commelec-api/CMakeLists.txt
+++ b/commelec-api/CMakeLists.txt
@@ -22,6 +22,6 @@ target_link_libraries(commelecd ${EXTRA_LIBS} ${CAPNP_LIBRARIES_LITE} ${Boost_LI
 
 set(CAPNP_SRCS "${CAPNP_SRCS}" PARENT_SCOPE)
 set(CAPNP_HDRS "${CAPNP_HDRS}" PARENT_SCOPE)
-set(CAPNP_LIBRARIES "${CAPNP_LIBRARIES}" PARENT_SCOPE)
-set(CAPNP_LIBRARIES_LITE "${CAPNP_LIBRARIES_LITE}" PARENT_SCOPE)
+#set(CAPNP_LIBRARIES "${CAPNP_LIBRARIES}" PARENT_SCOPE)
+#set(CAPNP_LIBRARIES_LITE "${CAPNP_LIBRARIES_LITE}" PARENT_SCOPE)
 # Export CAPNP_ defs to parent scope 
