--- a/commelec-interpreter/CMakeLists.txt
+++ b/commelec-interpreter/CMakeLists.txt
@@ -1,3 +1,5 @@
+set_source_files_properties(${CAPNP_SRCS} PROPERTIES GENERATED TRUE)
+
 add_library(cl_interpreter 
   adv-interpreter-eval.cpp  adv-interpreter-proj.cpp  adv-interpreter.cpp
   adv-interpreter-membership.cpp  adv-interpreter-recthull.cpp  boundingbox-convexpolygon.cpp
