--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,3 +1,5 @@
+set_source_files_properties(${CAPNP_SRCS} PROPERTIES GENERATED TRUE)
+
 add_executable(interpreter_test interpreter.cpp ${CAPNP_SRCS})
 target_link_libraries (interpreter_test ${CAPNP_LIBRARIES} seidel hlapi cl_interpreter) 
 
