Added initial Doxygen documentation
* real-expr convenience functions have been documented
* a work in progress

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,3 +63,15 @@ add_subdirectory(utils)
 add_subdirectory(tests)
 enable_testing()
 add_test(interpreter_test tests/interpreter_test)
+
+# Add target to generate API documentation with Doxygen
+# credits to http://majewsky.wordpress.com/2010/08/14/tip-of-the-day-cmake-and-doxygen/
+find_package(Doxygen)
+if(DOXYGEN_FOUND)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile @ONLY)
+add_custom_target(doc
+${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile
+WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+COMMENT "Generating API documentation with Doxygen" VERBATIM
+)
+endif(DOXYGEN_FOUND)
